# my-agent

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DEVELOPMENT.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
codex/: 2026-06-12.md  2026-06-13.md  2026-06-14.md  2026-06-15.md
deploy/: personal-codex-agent.service
src/personal_codex_agent/: __init__.py  __main__.py  api.py  bot.py  cgi_harness.py  codex_runtime.py  config.py  persona.py  storage.py
tests/: test_api.py  test_bot.py  test_cgi_harness.py  test_codex_runtime.py  test_config.py  test_deploy.py  test_logging.py  test_main.py  test_persona.py  test_storage.py
